-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-07-14T10:45:22.101Z

CREATE TYPE "Gender" AS ENUM (
  'MALE',
  'FEMALE',
  'OTHER',
  'UNKNOWN'
);

CREATE TYPE "Service" AS ENUM (
  'EMAIL',
  'PHONE',
  'WALLET',
  'GOOGLE',
  'APPLE',
  'FACEBOOK',
  'TWITTER',
  'GITHUB',
  'LINKEDIN'
);

CREATE TYPE "SignupStatus" AS ENUM (
  'PENDING',
  'APPROVED',
  'FAILED',
  'REJECTED'
);

CREATE TYPE "SettingDataType" AS ENUM (
  'STRING',
  'NUMBER',
  'BOOLEAN',
  'OBJECT'
);

CREATE TYPE "TokenDataType" AS ENUM (
  'IMPORTED',
  'CREATED'
);

CREATE TYPE "GroupPurpose" AS ENUM (
  'BANK_TRANSFER',
  'MOBILE_MONEY',
  'COMMUNICATION'
);

CREATE TYPE "ProjectStatus" AS ENUM (
  'NOT_READY',
  'ACTIVE',
  'CLOSED'
);

CREATE TYPE "BeneficiaryTypes" AS ENUM (
  'ENROLLED',
  'REFERRED'
);

CREATE TYPE "BankedStatus" AS ENUM (
  'UNKNOWN',
  'UNBANKED',
  'BANKED',
  'UNDER_BANKED'
);

CREATE TYPE "InternetStatus" AS ENUM (
  'UNKNOWN',
  'NO_INTERNET',
  'HOME_INTERNET',
  'MOBILE_INTERNET'
);

CREATE TYPE "PhoneStatus" AS ENUM (
  'UNKNOWN',
  'NO_PHONE',
  'FEATURE_PHONE',
  'SMART_PHONE'
);

CREATE TYPE "TransactionStatus" AS ENUM (
  'PENDING',
  'APPROVED',
  'REJECTED',
  'FAILED'
);

CREATE TYPE "GrievanceStatus" AS ENUM (
  'NEW',
  'UNDER_REVIEW',
  'RESOLVED',
  'CLOSED'
);

CREATE TYPE "GrievanceType" AS ENUM (
  'TECHNICAL',
  'NON_TECHNICAL',
  'OTHER'
);

CREATE TYPE "KoboBeneficiaryType" AS ENUM (
  'SALE',
  'LEAD',
  'HOME_VISIT'
);

CREATE TYPE "KoboBeneficiaryStatus" AS ENUM (
  'PENDING',
  'FAILED',
  'SUCCESS'
);

CREATE TYPE "OfframpStatus" AS ENUM (
  'PENDING',
  'PROCESSING',
  'COMPLETED',
  'FAILED'
);

CREATE TABLE "tbl_users" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String",
  "gender" "Gender" NOT NULL DEFAULT 'UNKNOWN',
  "email" "String",
  "phone" "String",
  "wallet" "String",
  "extras" "Json",
  "notes" "String",
  "sessionId" "String",
  "Auth" tbl_auth NOT NULL,
  "UserRole" tbl_users_roles NOT NULL,
  "Signup" tbl_users_signups NOT NULL,
  "VendorProject" tbl_projects_vendors NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "createdBy" "String",
  "updatedBy" "String",
  "grievances" tbl_grievances NOT NULL
);

CREATE TABLE "tbl_auth_roles" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY UNIQUE NOT NULL,
  "name" "String" UNIQUE NOT NULL,
  "isSystem" "Boolean" NOT NULL DEFAULT false,
  "expiry" "DateTime",
  "Permission" tbl_auth_permissions NOT NULL,
  "UserRole" tbl_users_roles NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "createdBy" "Int",
  "updatedBy" "Int"
);

CREATE TABLE "tbl_auth_permissions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY UNIQUE NOT NULL,
  "roleId" "Int" NOT NULL,
  "action" "String" NOT NULL,
  "subject" "String" NOT NULL,
  "inverted" "Boolean" NOT NULL DEFAULT false,
  "conditions" "Json",
  "reason" "String",
  "Role" tbl_auth_roles NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime"
);

CREATE TABLE "tbl_users_roles" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "userId" "Int" NOT NULL,
  "roleId" "Int" NOT NULL,
  "expiry" "DateTime",
  "User" tbl_users NOT NULL,
  "Role" tbl_auth_roles NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "createdBy" "Int"
);

CREATE TABLE "tbl_auth" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "userId" "Int" NOT NULL,
  "service" "Service" NOT NULL,
  "serviceId" "String" NOT NULL,
  "details" "Json",
  "challenge" "String",
  "falseAttempts" "Int" NOT NULL DEFAULT 0,
  "isLocked" "Boolean" NOT NULL DEFAULT false,
  "lockedOnAt" "DateTime",
  "lastLoginAt" "DateTime",
  "User" tbl_users NOT NULL,
  "AuthLog" tbl_auth_sessions NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime"
);

CREATE TABLE "tbl_auth_sessions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "clientId" "String" NOT NULL,
  "sessionId" "String" UNIQUE NOT NULL,
  "authId" "Int" NOT NULL,
  "ip" "String",
  "details" "Json",
  "userAgent" "String",
  "Auth" tbl_auth NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "tbl_users_signups" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "userIdentifier" "String",
  "data" "Json",
  "status" "SignupStatus" NOT NULL DEFAULT 'PENDING',
  "rejectedReason" "String",
  "approvedBy" "Int",
  "approvedAt" "DateTime",
  "User" tbl_users,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime"
);

CREATE TABLE "tbl_settings" (
  "name" "String" PRIMARY KEY,
  "value" "Json" NOT NULL,
  "dataType" "SettingDataType" NOT NULL,
  "requiredFields" "String[]" NOT NULL,
  "isReadOnly" "Boolean" NOT NULL DEFAULT false,
  "isPrivate" "Boolean" NOT NULL DEFAULT true
);

CREATE TABLE "tbl_auth_apps" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "address" "String" UNIQUE NOT NULL,
  "name" "String" NOT NULL,
  "description" "String",
  "nonceMessage" "String",
  "createdBy" "String",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_beneficiaries" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "gender" "Gender" NOT NULL DEFAULT 'UNKNOWN',
  "walletAddress" "String" UNIQUE NOT NULL,
  "birthDate" "DateTime",
  "age" "Int",
  "location" "String",
  "latitude" "Float",
  "longitude" "Float",
  "extras" "Json",
  "notes" "String",
  "bankedStatus" "BankedStatus" NOT NULL DEFAULT 'UNKNOWN',
  "internetStatus" "InternetStatus" NOT NULL DEFAULT 'UNKNOWN',
  "phoneStatus" "PhoneStatus" NOT NULL DEFAULT 'UNKNOWN',
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "isVerified" "Boolean" NOT NULL DEFAULT false,
  "pii" tbl_beneficiaries_pii,
  "BeneficiaryProject" tbl_beneficiaries_projects NOT NULL,
  "groupedBeneficiaries" tbl_grouped_beneficiaries NOT NULL
);

CREATE TABLE "tbl_grouped_beneficiaries" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "beneficiaryGroupId" "String" NOT NULL,
  "beneficiaryGroup" tbl_beneficiaries_group NOT NULL,
  "beneficiaryId" "String" NOT NULL,
  "Beneficiary" tbl_beneficiaries NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime" NOT NULL,
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_beneficiaries_group" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String" UNIQUE NOT NULL,
  "groupPurpose" "GroupPurpose",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "groupedBeneficiaries" tbl_grouped_beneficiaries NOT NULL,
  "beneficiaryGroupProject" tbl_beneficiaries_gorup_projects NOT NULL
);

CREATE TABLE "tbl_beneficiaries_gorup_projects" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "projectId" "String" NOT NULL,
  "Project" tbl_projects NOT NULL,
  "beneficiaryGroupId" "String" NOT NULL,
  "beneficiaryGroup" tbl_beneficiaries_group NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime" NOT NULL,
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_beneficiaries_projects" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "projectId" "String" NOT NULL,
  "Project" tbl_projects NOT NULL,
  "beneficiaryId" "String" NOT NULL,
  "Beneficiary" tbl_beneficiaries NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime" NOT NULL,
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_beneficiaries_pii" (
  "beneficiaryId" "Int" UNIQUE NOT NULL,
  "name" "String",
  "phone" "String" UNIQUE NOT NULL,
  "email" "String",
  "extras" "Json",
  "beneficiary" tbl_beneficiaries NOT NULL
);

CREATE TABLE "tbl_projects" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String" NOT NULL,
  "description" "String",
  "status" "ProjectStatus" NOT NULL DEFAULT 'NOT_READY',
  "type" "String" NOT NULL,
  "contractAddress" "String",
  "extras" "Json",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "BeneficiaryProject" tbl_beneficiaries_projects NOT NULL,
  "ProjectVendors" tbl_projects_vendors NOT NULL,
  "beneficiaryGroupProject" tbl_beneficiaries_gorup_projects NOT NULL,
  "Grievance" tbl_grievances NOT NULL
);

CREATE TABLE "tbl_stats" (
  "name" "String" PRIMARY KEY,
  "data" "Json" NOT NULL,
  "group" "String",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime"
);

CREATE TABLE "tbl_vendors" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String" NOT NULL,
  "email" "String",
  "phone" "String",
  "location" "String",
  "wallet" "String",
  "extras" "Json",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_projects_vendors" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "projectId" "String" NOT NULL,
  "Project" tbl_projects NOT NULL,
  "vendorId" "String" NOT NULL,
  "User" tbl_users NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "extras" "Json"
);

CREATE TABLE "tbl_transactions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "projectId" "String" NOT NULL,
  "beneficiaryId" "String" NOT NULL,
  "vendorId" "String" NOT NULL,
  "amount" "Float" NOT NULL,
  "currency" "String" NOT NULL,
  "status" "TransactionStatus" NOT NULL DEFAULT 'PENDING',
  "extras" "Json",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_grievances" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "reportedBy" "String" NOT NULL,
  "reporterUserId" "Int" NOT NULL,
  "reporterUser" tbl_users NOT NULL,
  "reporterContact" "String" NOT NULL,
  "title" "String" NOT NULL,
  "type" "GrievanceType" NOT NULL,
  "projectId" "String" NOT NULL,
  "project" tbl_projects NOT NULL,
  "description" "String" NOT NULL,
  "status" "GrievanceStatus" NOT NULL DEFAULT 'NEW',
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime" NOT NULL,
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_temp_beneficiaries" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "firstName" "String" NOT NULL,
  "lastName" "String" NOT NULL,
  "govtIDNumber" "String",
  "gender" "Gender" NOT NULL DEFAULT 'UNKNOWN',
  "birthDate" "DateTime",
  "walletAddress" "String" NOT NULL,
  "phone" "String",
  "email" "String",
  "archived" "Boolean" NOT NULL DEFAULT false,
  "location" "String",
  "latitude" "Float",
  "longitude" "Float",
  "notes" "String",
  "bankedStatus" "BankedStatus" NOT NULL DEFAULT 'UNKNOWN',
  "internetStatus" "InternetStatus" NOT NULL DEFAULT 'UNKNOWN',
  "phoneStatus" "PhoneStatus" NOT NULL DEFAULT 'UNKNOWN',
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "extras" "Json",
  "deletedAt" "DateTime",
  "TempGroupedBeneficiaries" tbl_temp_beneficiary_group NOT NULL
);

CREATE TABLE "tbl_kobo_beneficiaries" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String" NOT NULL,
  "gender" "Gender" NOT NULL DEFAULT 'UNKNOWN',
  "type" "KoboBeneficiaryType" NOT NULL DEFAULT 'SALE',
  "status" "KoboBeneficiaryStatus" NOT NULL DEFAULT 'PENDING',
  "phone" "String" NOT NULL,
  "age" "Int",
  "email" "String",
  "wallet" "String",
  "leadInterests" "String[]" NOT NULL,
  "extras" "Json",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime"
);

CREATE TABLE "tbl_temp_group" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String" UNIQUE NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "TempGroupedBeneficiaries" tbl_temp_beneficiary_group NOT NULL
);

CREATE TABLE "tbl_temp_beneficiary_group" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "tempGroupUID" "String" NOT NULL,
  "tempGroup" tbl_temp_group NOT NULL,
  "tempBenefUID" "String" NOT NULL,
  "tempBeneficiary" tbl_temp_beneficiaries NOT NULL,
  "createdAt" "DateTime" NOT NULL DEFAULT (now())
);

CREATE TABLE "tbl_tokens" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String" NOT NULL,
  "symbol" "String" UNIQUE NOT NULL,
  "description" "String",
  "decimals" "Int" NOT NULL,
  "initialSupply" "Int" NOT NULL,
  "fromBlock" "Int" UNIQUE NOT NULL,
  "contractAddress" "String" UNIQUE NOT NULL,
  "transactionHash" "String" UNIQUE,
  "type" "TokenDataType" NOT NULL DEFAULT 'CREATED',
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "createdBy" "Int",
  "updatedBy" "Int"
);

CREATE TABLE "tbl_offramp_providers" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "name" "String" UNIQUE NOT NULL,
  "description" "String",
  "config" "Json" NOT NULL,
  "extras" "Json",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "createdBy" "Int",
  "updatedBy" "Int"
);

CREATE TABLE "tbl_offramps" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "chain" "String" NOT NULL,
  "token" "String" NOT NULL,
  "senderAddress" "String" NOT NULL,
  "amount" "Float" NOT NULL,
  "requestId" "String" UNIQUE,
  "escrowAddress" "String",
  "status" "OfframpStatus" NOT NULL DEFAULT 'PENDING',
  "transaction" tbl_offramp_transactions,
  "extras" "Json",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "createdBy" "Int",
  "updatedBy" "Int"
);

CREATE TABLE "tbl_offramp_transactions" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "uuid" "String" UNIQUE NOT NULL,
  "requestId" "String" UNIQUE NOT NULL,
  "txHash" "String" NOT NULL,
  "walletId" "String",
  "customerKey" "String",
  "chain" "String",
  "token" "String",
  "referenceId" "String",
  "status" "OfframpStatus" NOT NULL DEFAULT 'PENDING',
  "extras" "Json",
  "createdAt" "DateTime" NOT NULL DEFAULT (now()),
  "updatedAt" "DateTime",
  "deletedAt" "DateTime",
  "createdBy" "Int",
  "updatedBy" "Int",
  "offrampRequest" tbl_offramps NOT NULL
);

CREATE UNIQUE INDEX ON "tbl_users_roles" ("userId", "roleId");

CREATE UNIQUE INDEX ON "tbl_auth" ("service", "serviceId");

CREATE UNIQUE INDEX ON "tbl_grouped_beneficiaries" ("beneficiaryGroupId", "beneficiaryId");

CREATE UNIQUE INDEX ON "tbl_beneficiaries_gorup_projects" ("projectId", "beneficiaryGroupId");

CREATE UNIQUE INDEX ON "tbl_beneficiaries_projects" ("projectId", "beneficiaryId");

CREATE UNIQUE INDEX ON "tbl_projects_vendors" ("projectId", "vendorId");

CREATE UNIQUE INDEX ON "tbl_temp_beneficiary_group" ("tempGroupUID", "tempBenefUID");

ALTER TABLE "tbl_auth_permissions" ADD FOREIGN KEY ("roleId") REFERENCES "tbl_auth_roles" ("id");

ALTER TABLE "tbl_users_roles" ADD FOREIGN KEY ("userId") REFERENCES "tbl_users" ("id");

ALTER TABLE "tbl_users_roles" ADD FOREIGN KEY ("roleId") REFERENCES "tbl_auth_roles" ("id");

ALTER TABLE "tbl_auth" ADD FOREIGN KEY ("userId") REFERENCES "tbl_users" ("id");

ALTER TABLE "tbl_auth_sessions" ADD FOREIGN KEY ("authId") REFERENCES "tbl_auth" ("id");

ALTER TABLE "tbl_users_signups" ADD FOREIGN KEY ("approvedBy") REFERENCES "tbl_users" ("id");

ALTER TABLE "tbl_grouped_beneficiaries" ADD FOREIGN KEY ("beneficiaryGroupId") REFERENCES "tbl_beneficiaries_group" ("uuid");

ALTER TABLE "tbl_grouped_beneficiaries" ADD FOREIGN KEY ("beneficiaryId") REFERENCES "tbl_beneficiaries" ("uuid");

ALTER TABLE "tbl_beneficiaries_gorup_projects" ADD FOREIGN KEY ("projectId") REFERENCES "tbl_projects" ("uuid");

ALTER TABLE "tbl_beneficiaries_gorup_projects" ADD FOREIGN KEY ("beneficiaryGroupId") REFERENCES "tbl_beneficiaries_group" ("uuid");

ALTER TABLE "tbl_beneficiaries_projects" ADD FOREIGN KEY ("projectId") REFERENCES "tbl_projects" ("uuid");

ALTER TABLE "tbl_beneficiaries_projects" ADD FOREIGN KEY ("beneficiaryId") REFERENCES "tbl_beneficiaries" ("uuid");

ALTER TABLE "tbl_beneficiaries" ADD FOREIGN KEY ("id") REFERENCES "tbl_beneficiaries_pii" ("beneficiaryId");

ALTER TABLE "tbl_projects_vendors" ADD FOREIGN KEY ("projectId") REFERENCES "tbl_projects" ("uuid");

ALTER TABLE "tbl_projects_vendors" ADD FOREIGN KEY ("vendorId") REFERENCES "tbl_users" ("uuid");

ALTER TABLE "tbl_grievances" ADD FOREIGN KEY ("reporterUserId") REFERENCES "tbl_users" ("id");

ALTER TABLE "tbl_grievances" ADD FOREIGN KEY ("projectId") REFERENCES "tbl_projects" ("uuid");

ALTER TABLE "tbl_temp_beneficiary_group" ADD FOREIGN KEY ("tempGroupUID") REFERENCES "tbl_temp_group" ("uuid");

ALTER TABLE "tbl_temp_beneficiary_group" ADD FOREIGN KEY ("tempBenefUID") REFERENCES "tbl_temp_beneficiaries" ("uuid");

ALTER TABLE "tbl_offramps" ADD FOREIGN KEY ("requestId") REFERENCES "tbl_offramp_transactions" ("requestId");
